--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -860,19 +860,28 @@ async function showTaskDetails(task) {
     const startDate = parseLocalDate(startDateStr);
 
     // Calculate the current turn based on the selected date
-    const currentDate = parseLocalDate(selectedDate);
-    const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-    const userOrder = [...task.users];
-
-    // For a "Daily" task with 1 time per day, rotate the turn based on the day difference
     const currentUser = getTurnByDate(task, selectedDate);
+const userOrder = [...task.users];
 
-const currentIndex = userOrder.indexOf(currentUser);
+// completedUsers is already declared earlier in showTaskDetails
+const repeatLimit = task.repeat === "Daily" ? (task.timesPerDay || 1)
+                   : task.repeat === "Weekly" ? (task.timesPerWeek || 1)
+                   : task.repeat === "Monthly" ? (task.timesPerMonth || 1)
+                   : 1;
 
+let nextUser = null;
+for (let i = 0; i < userOrder.length; i++) {
+    const user = userOrder[i];
+    const count = completedUsers.filter(u => u === user).length;
+    if (count < repeatLimit && user !== currentUser) {
+        nextUser = user;
+        break;
+    }
+}
+if (!nextUser) {
+    nextUser = userOrder[0]; // fallback
+}
 
-    // Calculate the next user in the turn order
-    const nextIndex = (currentIndex + 1) % userOrder.length;
-    const nextUser = userOrder[nextIndex];
 
     // Get completions for the selected date
     const completedRaw = task.completions?.[selectedDate] || [];
